--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description">
     <!-- OGP設定-->
     <meta property="og:url" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/#/">
+    <meta property="og:type" content="article">
     <meta property="og:title" content="小魔女諾貝塔雜貨店">
     <meta property="og:description" content="小魔女諾貝塔雜貨店，在古堡探險的旅途中，為您提供所需的道具與物資。">
     <meta property="og:image" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/ogp.jpg">
