--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <!-- OGP設定-->
     <meta property="og:url" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/#/">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="小魔女諾貝塔雜貨店">
-    <meta property="og:description" content="小魔女諾貝塔雜貨店，在古堡探險的旅途中，為您提供所需的道具與物資。">
+    <meta property="og:title" content="小魔女諾貝塔雜貨工坊">
+    <meta property="og:description" content="小魔女諾貝塔雜貨工坊，在古堡探險的旅途中，為您提供所需的道具與物資。">
     <meta property="og:image" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/ogp.jpg">
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
