--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="description">
+    <meta name="description" />
+    <meta name="robots" content="none" />
     <!-- OGP設定-->
-    <meta property="og:url" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/#/">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="小魔女諾貝塔雜貨工坊">
-    <meta property="og:description" content="小魔女諾貝塔雜貨工坊，在古堡探險的旅途中，為您提供所需的道具與物資。">
-    <meta property="og:image" content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/ogp.jpg">
+    <meta
+      property="og:url"
+      content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/#/"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="小魔女諾貝塔雜貨工坊" />
+    <meta
+      property="og:description"
+      content="小魔女諾貝塔雜貨工坊，在古堡探險的旅途中，為您提供所需的道具與物資。"
+    />
+    <meta
+      property="og:image"
+      content="https://overactive1988.github.io/HexSchool_vue_lesson2021/week08/ogp.jpg"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -20,6 +30,12 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
