--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="canonical" href="https://www.goyllo.com/cloudflare-ssl-for-github-pages/">
   </head>
   <body>
     <noscript>
