--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="canonical" href="https://www.goyllo.com/cloudflare-ssl-for-github-pages/">
+    <link
+      rel="canonical"
+      href="https://www.littlewitchnobeta.com/cloudflare-ssl-for-github-pages/"
+    />
   </head>
   <body>
     <noscript>
